@@ -13,4 +13,4 @@ export JDK_HOME=/opt/jdk1.8.0_181
 export JAVA_HOME=/opt/jdk1.8.0_181
 export PATH=/opt/jdk1.8.0_181/bin:/opt/jdk1.8.0_181/jre/bin:$PATH
 
-java -Djava.ext.dirs=./lib -jar ./lib/ArcGISTest.jar &
+ant run
